# veoveo

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CODEMAP.md  COORDINATES_MCP_DESIGN.md  Cargo.toml  Dockerfile  Justfile  OPTIMIZATION_MCP_DESIGN.md  README.md  RECORDING_HUB_DESIGN.md  TECH_DESIGN.md  compose.tunnel.yaml  compose.yaml  docker-bake.hcl
agents/runtime/: Cargo.toml
agents/runtime/src/: lib.rs  runtime.rs  types.rs
agents/runtime/tests/: surreal_integration.rs
crates/agent-kernel/: Cargo.toml  Dockerfile
crates/agent-kernel/src/: budget.rs  connection.rs  context.rs  delegate.rs  elicitation.rs  episode.rs  ledger.rs  lib.rs  manifest.rs  memory.rs  operator.rs  recorder.rs  replay.rs  rrd.rs  summary.rs  tasks.rs  timeline.rs  tools.rs  wake.rs
crates/artifact-client/: Cargo.toml
crates/artifact-client/src/: lib.rs
crates/artifact-service/: Cargo.toml  Dockerfile
crates/artifact-service/migrations/: 0001_init.sql
crates/artifact-service/src/: auth.rs  config.rs  crypto.rs  http.rs  ledger.rs  lib.rs  service.rs  store.rs
crates/coordinates-mcp/: Cargo.toml  Dockerfile
crates/coordinates-mcp/src/: artifacts.rs  contract.rs  engine.rs  lib.rs  state.rs  uris.rs
crates/duckdb-runtime/: Cargo.toml
crates/duckdb-runtime/src/: engine.rs
crates/mcp-conformance/: Cargo.toml
crates/mcp-contract/: Cargo.toml
crates/mcp-contract/src/: access.rs  analytics.rs  artifact_service.rs  coordinates.rs  deployment.rs  duckdb.rs  gateway.rs  generation.rs  host.rs  internal_auth.rs  lib.rs  optimization.rs  pagination.rs  provider.rs  storage.rs  subscriptions.rs  tasks.rs  telemetry.rs  timeseries.rs  uri.rs  usage.rs
crates/mcp-foundation/: Cargo.toml
crates/mcp-foundation/src/: lib.rs  provider.rs  uri.rs  waiters.rs
crates/mcp-gateway/: Cargo.toml  Dockerfile
crates/mcp-gateway/migrations/: 0001_gateway_control_plane.sql
crates/mcp-gateway/src/: auth.rs  catalog.rs  control_db.rs  control_store.rs  lib.rs  mcp.rs  mcp_support.rs  metadata.rs  policy.rs  principal_audit.rs  secrets.rs  state.rs  tool_name.rs
crates/mcp-gateway/tests/: control_store.rs  gateway_state.rs
crates/mcp-task-extension/: Cargo.toml
crates/mcp-task-extension/src/: lib.rs  models.rs  projection.rs
crates/mcp-task-extension/tests/: protocol.rs
crates/media-mcp/: Cargo.toml  Dockerfile
crates/media-mcp/src/: artifacts.rs  lib.rs  provider.rs  state.rs  uris.rs
crates/optimization-mcp/: Cargo.toml  Dockerfile
crates/optimization-mcp/src/: artifacts.rs  contract.rs  lib.rs  planning.rs  state.rs  uris.rs
crates/recording-hub/: Cargo.toml  Dockerfile
crates/recording-hub/scripts/: catalog_query.py  hub_agent_world_smoke.sh  hub_bench.sh  hub_catalog_smoke.sh  hub_python_env.sh  hub_spool_smoke.sh
crates/recording-hub/src/: config.rs  lib.rs  query.rs  sim.rs  spool.rs  video.rs
crates/recording-hub/tests/: spool_roundtrip.rs
crates/smoke/: Cargo.toml  build.rs
crates/task-runtime/: Cargo.toml
crates/task-runtime/src/: runtime.rs
crates/wavespeed-mcp-server/: Cargo.toml
crates/wavespeed-mcp-server/src/: lib.rs  uris.rs  wavespeed.rs  webhook.rs
docs/architecture/: README.md  index.html  pyproject.toml
docs/architecture/catalogs/: interfaces-and-protocols.csv  model-glossary.csv  requirements-traceability.csv  software-components.csv
docs/architecture/model/: MODEL-IMPORT.md  model-manifest.yaml  veoveo-uaf-sysml.xmi
docs/architecture/tools/: package.py  qa.py  render.py  validate.py
mcp/contract/: Cargo.toml  DESIGN.md
mcp/contract/src/: access.rs  analytics.rs  artifact_service.rs  bootstrap.rs  coordinates.rs  deployment.rs  docs.rs  duckdb.rs  gateway.rs  host.rs  internal_auth.rs  lib.rs  schema.rs  storage.rs  subscriptions.rs  tasks.rs  transport.rs  uri.rs  waiters.rs  work_context.rs
platform/gateway/: Cargo.toml  Dockerfile
platform/gateway/src/: auth.rs  catalog.rs  control_store.rs  lib.rs  mcp.rs  mcp_support.rs  metadata.rs  policy.rs
platform/gateway/tests/: control_store.rs  exposure_probe.rs  gateway_state.rs
platform/store/: Cargo.toml
platform/store/migrations/: 0018_map_domain.surql  0019_time_domain.surql  0020_audit_write_path.surql  0021_recording_ingest.surql  0022_recording_ingest_quotas.surql  0023_recording_lifecycle.surql  0024_work_context_governance.surql  0025_map_authoring.surql  0026_map_authoring_products.surql  0027_frame_world_graphs.surql  0028_mcp_streamable_http.surql
platform/store/src/: administration.rs  artifact_access_requests.rs  artifacts.rs  changefeed.rs  coordinates.rs  error.rs  frame_worlds.rs  gateway_runtime.rs  governance.rs  identity.rs  ids.rs  lib.rs  map.rs  map_authoring.rs  map_presentations.rs  migrations.rs  models.rs  recording_ingest.rs  recordings.rs  store.rs  table.rs  time.rs
platform/store/tests/: surreal_integration.rs
platform/task-runtime/: Cargo.toml
platform/task-runtime/src/: lib.rs  runtime.rs  types.rs
platform/task-runtime/tests/: surreal_integration.rs
python/veoveo-mcp/: pyproject.toml
python/veoveo-mcp/tests/: test_host_and_pagination.py  test_internal_auth.py  test_task_runtime_integration.py
servers/artifact-mcp/: AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile
servers/artifact-mcp/src/: lib.rs
servers/map-mcp/: AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile
servers/map-mcp/assets/: admin-app.html  editor-app.html
servers/map-mcp/data/: pyproject.toml
servers/map-mcp/src/: administration.rs  analytics.rs  artifacts.rs  catalog.rs  geodesy.rs  geography.rs  lib.rs  mcp.rs  prompts.rs  release_products.rs  state.rs  uris.rs
servers/media-mcp/: AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile
servers/media-mcp/src/: uris.rs
servers/media-mcp/tests/: surreal_integration.rs
servers/perception-mcp/: AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile
servers/perception-mcp/src/: catalog.rs  contract.rs  executor.rs  lib.rs  source.rs
servers/recording-mcp/: AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile
servers/recording-mcp/src/: lib.rs  (+4 more)
servers/time-mcp/: AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile
(+760 files in other folders)
