[workspace]
members = [
    "crates/agent-kernel",
    "crates/artifact-client",
    "crates/artifact-service",
    "crates/coordinates-mcp",
    "crates/duckdb-mcp",
    "crates/mcp-gateway",
    "crates/mcp-conformance",
    "crates/mcp-contract",
    "crates/mcp-stdio-bridge",
    "crates/media-mcp",
    "crates/optimization-mcp",
    "crates/rrd",
    "crates/smoke",
    "crates/timeseries-mcp",
]
resolver = "3"

[workspace.metadata]
name = "veoveo"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
base64 = "0.22.1"
chacha20poly1305 = { version = "0.11.0", features = ["alloc", "getrandom", "rand_core"] }
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
duckdb = { git = "https://github.com/rozgo/duckdb-rs.git", rev = "e2f3d156223250827567d154035e670432d97ac9", features = ["chrono"] }
futures = "0.3.32"
geo = { version = "0.33.1", features = ["serde"] }
geo-types = { version = "0.7.19", features = ["serde"] }
geographiclib-rs = "0.2.7"
getrandom = "0.3.4"
good_lp = { version = "1.15.2", default-features = false, features = ["microlp"] }
hex = "0.4.3"
hmac = "0.13.0"
jsonschema = "0.46.9"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
object_store = { version = "0.14.0", default-features = false, features = ["aws"] }
opentelemetry = "0.32.0"
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace", "logs"] }
opentelemetry_sdk = "0.32.1"
parking_lot = "0.12.5"
proj = { version = "0.31.0", default-features = false, features = ["geo-types", "bundled_proj"] }
rayon = "1.12.0"
reqwest = { version = "0.13.4", default-features = false }
rig-core = { git = "https://github.com/rozgo/rig.git", rev = "bd4eedce769120a016605c9b1c4fbd563181983e", features = ["rmcp"] }
re_dataframe = "0.34.0"
re_chunk_store = "0.34.0"
rcgen = "0.14.8"
re_sdk = "0.34.0"
re_sdk_types = "0.34.0"
rmcp = "2.2.0"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sguaba = { version = "0.10.3", features = ["serde"] }
secrecy = "0.10.3"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "json", "uuid", "migrate", "macros"] }
tokio = "1.52.3"
tokio-util = "0.7.18"
tower-http = { version = "0.7.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4"] }
zeroize = "1.8.2"
vaultrs = { version = "0.8.0", default-features = false, features = ["rustls"] }
veoveo-mcp-contract = { path = "crates/mcp-contract", default-features = false }
veoveo-rrd = { path = "crates/rrd" }
