[workspace]
members = [
    "crates/agent-kernel",
    "crates/agent-runtime",
    "crates/artifact-client",
    "crates/artifact-mcp",
    "crates/artifact-service",
    "crates/console-bff",
    "crates/coordinates-mcp",
    "crates/duckdb-mcp",
    "crates/duckdb-runtime",
    "crates/mcp-gateway",
    "crates/mcp-conformance",
    "crates/mcp-contract",
    "crates/mcp-task-extension",
    "crates/mcp-stdio-bridge",
    "crates/media-mcp",
    "crates/optimization-mcp",
    "crates/perception-mcp",
    "crates/platform-store",
    "crates/recording-hub",
    "crates/recording-mcp",
    "crates/rrd",
    "crates/smoke",
    "crates/task-runtime",
    "crates/timeseries-mcp",
    "showcase/sumo/mcp",
]
resolver = "3"

[workspace.metadata]
name = "veoveo"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
base64 = "0.22.1"
bytes = "1.12.0"
chacha20poly1305 = { version = "0.11.0", features = ["alloc", "getrandom", "rand_core"] }
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
duckdb = { git = "https://github.com/rozgo/duckdb-rs.git", rev = "e2f3d156223250827567d154035e670432d97ac9", features = ["chrono"] }
futures = "0.3.32"
geo = { version = "0.32.0", features = ["serde"] }
geo-types = { version = "0.7.19", features = ["serde"] }
geographiclib-rs = "0.2.7"
getrandom = "0.3.4"
http = "1.4.2"
good_lp = { version = "1.15.2", default-features = false, features = ["microlp"] }
hex = "0.4.3"
hmac = "0.13.0"
h264-reader = "0.8.0"
jsonschema = "0.46.9"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
object_store = { version = "0.14.0", default-features = false, features = ["aws"] }
opentelemetry = "0.32.0"
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace", "logs"] }
opentelemetry_sdk = "0.32.1"
mp4 = "0.14.0"
parking_lot = "0.12.5"
proj = { version = "0.31.0", default-features = false, features = ["geo-types", "bundled_proj"] }
rayon = "1.12.0"
reqwest = { version = "0.13.4", default-features = false }
rig-core = { git = "https://github.com/rozgo/rig.git", rev = "d40006987ce4c102ba28a91a98ad137a40ea7bf7", features = ["rmcp"] }
re_dataframe = "0.34.0"
re_chunk_store = "0.34.0"
rcgen = "0.14.8"
re_sdk = "0.34.0"
re_sdk_types = "0.34.0"
re_grpc_server = "0.34.0"
re_grpc_client = "0.34.0"
re_log_channel = "0.34.0"
re_log_encoding = { version = "0.34.1", features = ["encoder", "decoder"] }
re_log_types = "0.34.0"
re_uri = "0.34.0"
re_build_info = "0.34.0"
rmcp = "2.2.0"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1.2.1"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sguaba = { version = "0.10.3", features = ["serde"] }
secrecy = "0.10.3"
sha2 = "0.11.0"
tokio = "1.52.3"
tokio-util = "0.7.18"
tower-http = { version = "0.7.0", features = ["fs", "trace", "cors"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
traci-rs = "0.2.0"
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4", "v5", "v7"] }
zeroize = "1.8.2"
vaultrs = { version = "0.8.0", default-features = false, features = ["rustls"] }
veoveo-mcp-contract = { path = "crates/mcp-contract", default-features = false }
veoveo-platform-store = { path = "crates/platform-store" }
veoveo-rrd = { path = "crates/rrd" }
