[workspace]
members = [
    "agents/kernel",
    "agents/runtime",
    "apps/console/bff",
    "mcp/apps-extension",
    "mcp/bridges/stdio",
    "mcp/contract",
    "mcp/schema-macros",
    "mcp/task-extension",
    "platform/artifacts/client",
    "platform/artifacts/service",
    "platform/gateway",
    "platform/recordings/forwarder",
    "platform/recordings/protocol",
    "platform/recordings/hub",
    "platform/recordings/rrd",
    "platform/recordings/video",
    "platform/runtimes/duckdb",
    "platform/store",
    "platform/task-runtime",
    "servers/artifact-mcp",
    "servers/frames-mcp",
    "servers/duckdb-mcp",
    "servers/media-mcp",
    "servers/map-mcp",
    "servers/optimization-mcp",
    "servers/perception-mcp",
    "servers/reason-mcp",
    "servers/recording-mcp",
    "servers/timeseries-mcp",
    "servers/time-mcp",
    "servers/uav-sim-mcp",
    "servers/view-mcp",
    "showcase/sumo/sumo-mcp",
    "testing/mcp-conformance",
    "testing/smoke",
]
resolver = "3"

[workspace.metadata]
name = "veoveo"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
base64 = "0.22.1"
bevy = { version = "=0.19.0", default-features = false }
bytes = "1.12.0"
chacha20poly1305 = { version = "0.11.0", features = ["alloc", "getrandom", "rand_core"] }
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
draco-gltf = { version = "0.1.0", default-features = false, features = ["image"] }
flate2 = "1.1.9"
duckdb = { git = "https://github.com/rozgo/duckdb-rs.git", rev = "e2f3d156223250827567d154035e670432d97ac9", features = ["chrono"] }
futures = "0.3.32"
glam = { version = "0.33.2", features = ["serde"] }
gltf = { version = "1.4.1", default-features = false, features = ["extensions", "import", "KHR_materials_unlit", "names", "utils"] }
geo = { version = "0.32.0", features = ["serde"] }
geo-types = { version = "0.7.19", features = ["serde"] }
geographiclib-rs = "0.2.7"
geojson = { version = "1.0.0", features = ["geo-types"] }
getrandom = "0.3.4"
http = "1.4.2"
good_lp = { version = "1.15.2", default-features = false, features = ["microlp"] }
hex = "0.4.3"
hmac = "0.13.0"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
hifitime = { version = "4.3.0", default-features = false, features = ["std"] }
h264-reader = "0.8.0"
jsonschema = "=0.48.5"
jiff = { version = "0.2.32", features = ["tz-system"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
object_store = { version = "0.14.0", default-features = false, features = ["aws"] }
opentelemetry = "0.32.0"
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace", "logs"] }
opentelemetry_sdk = "0.32.1"
mp4 = "0.14.0"
nix = { version = "0.31.3", features = ["process", "signal"] }
parking_lot = "0.12.5"
petgraph = { version = "0.8.3", default-features = false, features = ["std"] }
polyline = "0.11.0"
proc-macro2 = "1.0.106"
proj = { version = "0.31.0", default-features = false, features = ["geo-types", "bundled_proj"] }
quote = "1.0.46"
rayon = "1.12.0"
rangemap = "1.7.1"
reqwest = { version = "0.13.4", default-features = false }
rig-core = { git = "https://github.com/rozgo/rig.git", rev = "215a3cfb9ec696c5d1d62b5c5d218c377e515236", features = ["rmcp"] }
prost = "=0.14.4"
re_dataframe = "=0.34.1"
re_chunk = "=0.34.1"
re_chunk_store = "=0.34.1"
re_entity_db = "=0.34.1"
rcgen = "0.14.8"
re_sdk = "=0.34.1"
re_sdk_types = "=0.34.1"
re_grpc_server = "=0.34.1"
re_grpc_client = "=0.34.1"
re_log_channel = "=0.34.1"
re_log_encoding = { version = "=0.34.1", features = ["encoder", "decoder"] }
re_log_types = "=0.34.1"
re_uri = "=0.34.1"
re_build_info = "=0.34.1"
rmcp = "2.2.0"
rstar = "0.12.2"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1.2.1"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sguaba = { version = "0.10.3", features = ["serde"] }
secrecy = "0.10.3"
sha2 = "0.11.0"
syn = "2.0.118"
tokio = "1.52.4"
tokio-util = "0.7.18"
thiserror = "2.0.18"
tar = "0.4.46"
tower-http = { version = "0.7.0", features = ["fs", "trace", "cors"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
traci-rs = "0.2.0"
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4", "v5", "v7"] }
zeroize = "1.8.2"
vaultrs = { version = "0.8.0", default-features = false, features = ["rustls"] }
veoveo-mcp-contract = { path = "mcp/contract", default-features = false }
veoveo-mcp-schema-macros = { path = "mcp/schema-macros" }
veoveo-platform-store = { path = "platform/store" }
veoveo-recording-protocol = { path = "platform/recordings/protocol" }
veoveo-rrd = { path = "platform/recordings/rrd" }
