[package]
name = "veoveo-agent-kernel"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_agent_kernel"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
duckdb.workspace = true
jsonwebtoken.workspace = true
re_chunk_store.workspace = true
re_dataframe.workspace = true
re_sdk.workspace = true
re_sdk_types.workspace = true
reqwest = { workspace = true, features = ["rustls-no-provider"] }
rig-core.workspace = true
rmcp = { workspace = true, features = [
    "client",
    "elicitation",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
] }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true
veoveo-mcp-contract.workspace = true

[dev-dependencies]
tempfile = "3"
