[package]
name = "veoveo-artifact-client"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_artifact_client"
path = "src/lib.rs"

[dependencies]
base64.workspace = true
reqwest = { workspace = true, features = ["rustls-no-provider", "json"] }
serde_json.workspace = true
veoveo-mcp-contract = { workspace = true, default-features = false }
