[package]
name = "veoveo-artifact-service"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_artifact_service"
path = "src/lib.rs"

[[bin]]
# Distinct from the domain servers' `server` bin so both can coexist in one
# `target/debug` (e.g. the smoke harness runs media + artifact-service together).
name = "artifact-service"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
getrandom.workspace = true
hex.workspace = true
hmac.workspace = true
object_store.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
veoveo-mcp-contract = { workspace = true, default-features = false }
zeroize.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["rustls-no-provider", "json"] }
tempfile = "3"
veoveo-artifact-client = { path = "../artifact-client" }
