[package]
name = "veoveo-coordinates-mcp"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_coordinates_mcp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures.workspace = true
geo.workspace = true
geo-types.workspace = true
geographiclib-rs.workspace = true
hex.workspace = true
proj.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["rustls-no-provider"] }
rustls.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sguaba.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
veoveo-artifact-client = { path = "../artifact-client" }
veoveo-mcp-contract.workspace = true
veoveo-mcp-task-extension = { path = "../mcp-task-extension" }
veoveo-platform-store = { path = "../platform-store" }
veoveo-rrd.workspace = true
veoveo-task-runtime = { path = "../task-runtime" }
