[package]
name = "veoveo-duckdb-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
duckdb.workspace = true
reqwest = { workspace = true, features = ["blocking", "rustls-no-provider"] }
serde_json.workspace = true
tempfile = "3"

[dev-dependencies]
rustls.workspace = true
