[package]
name = "veoveo-mcp-conformance"
version.workspace = true
edition.workspace = true

[[bin]]
name = "conformance"
path = "src/bin/conformance.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
rcgen.workspace = true
reqwest = { workspace = true, features = ["rustls-no-provider"] }
rmcp = { workspace = true, features = ["server", "client", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "reqwest-tls-no-provider"] }
rustls.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
veoveo-coordinates-mcp = { path = "../coordinates-mcp" }
veoveo-mcp-contract = { workspace = true, features = ["analytics"] }
veoveo-rrd.workspace = true
