[package]
name = "veoveo-mcp-contract"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_mcp_contract"
path = "src/lib.rs"

[[bin]]
name = "conformance"
path = "src/bin/conformance.rs"

[features]
default = ["analytics"]
analytics = ["dep:duckdb"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
duckdb = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rmcp = { workspace = true, features = ["server", "client", "transport-streamable-http-client-reqwest", "reqwest"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
