[package]
name = "veoveo-mcp-contract"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_mcp_contract"
path = "src/lib.rs"

[features]
default = ["analytics"]
analytics = ["dep:duckdb"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
duckdb = { workspace = true, optional = true }
jsonwebtoken.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
parking_lot.workspace = true
rmcp = { workspace = true, features = ["server"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
