[package]
name = "mcp-foundation"
version.workspace = true
edition.workspace = true

[lib]
name = "mcp_foundation"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
rmcp = { workspace = true, features = ["server"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
