[package]
name = "veoveo-mcp-gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_mcp_gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/bin/gateway.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
duckdb.workspace = true
jsonwebtoken.workspace = true
reqwest = { workspace = true, features = ["json", "rustls"] }
rmcp = { workspace = true, features = ["server", "client", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "reqwest"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
veoveo-mcp-contract = { workspace = true, features = ["analytics"] }

[dev-dependencies]
base64.workspace = true
