[package]
name = "veoveo-mcp-task-extension"
version.workspace = true
edition.workspace = true

[dependencies]
async-stream = "0.3.6"
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.18"
uuid = { workspace = true, features = ["serde", "v7"] }
veoveo-platform-store = { path = "../platform-store" }
veoveo-task-runtime = { path = "../task-runtime" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
