[package]
name = "veoveo-media-mcp"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_media_mcp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
jsonschema.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
veoveo-mcp-contract.workspace = true
