[package]
name = "veoveo-media-mcp"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_media_mcp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
duckdb.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
jsonschema.workspace = true
object_store.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-no-provider"] }
rustls.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
veoveo-mcp-contract = { workspace = true, features = ["analytics"] }
