[package]
name = "veoveo-optimization-mcp"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_optimization_mcp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
duckdb.workspace = true
good_lp.workspace = true
hex.workspace = true
object_store.workspace = true
re_sdk.workspace = true
re_sdk_types.workspace = true
reqwest = { workspace = true, features = ["rustls-no-provider"] }
rustls.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
veoveo-artifact-client = { path = "../artifact-client" }
veoveo-mcp-contract = { workspace = true, features = ["analytics"] }
