[package]
name = "veoveo-smoke"
version.workspace = true
edition.workspace = true

[[bin]]
name = "smoke"
path = "src/bin/smoke.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest = { workspace = true, features = ["json", "rustls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
