[package]
name = "veoveo-smoke"
version.workspace = true
edition.workspace = true

[[bin]]
name = "smoke"
path = "src/bin/smoke.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-no-provider"] }
rmcp = { workspace = true, features = ["client", "transport-streamable-http-client-reqwest", "reqwest-tls-no-provider"] }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true
uuid.workspace = true
veoveo-mcp-contract = { path = "../mcp-contract" }
