[package]
name = "veoveo-smoke"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "smoke"
path = "src/bin/smoke.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
duckdb.workspace = true
rcgen.workspace = true
reqwest = { workspace = true, features = ["cookies", "json", "rustls-no-provider"] }
re_grpc_server.workspace = true
rmcp = { workspace = true, features = ["client", "transport-streamable-http-client-reqwest", "reqwest-tls-no-provider"] }
rustls.workspace = true
scraper.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
url.workspace = true
uuid.workspace = true
veoveo-mcp-contract = { path = "../mcp-contract" }
veoveo-platform-store = { path = "../platform-store" }
veoveo-recording-hub = { path = "../recording-hub" }
veoveo-sumo-mcp = { path = "../../showcase/sumo/mcp" }

[build-dependencies]
duckdb.workspace = true
