[package]
name = "wavespeed-mcp-server"
version.workspace = true
edition.workspace = true

[lib]
name = "wavespeed_mcp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
jsonschema.workspace = true
mcp-foundation.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server", "client", "transport-streamable-http-client-reqwest", "reqwest"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
