[project]
name = "veoveo-architecture-tools"
version = "0.1.0"
description = "Locked rendering, validation, packaging, and visual-QA toolchain for the formal architecture artifacts"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pillow>=11,<13",
    "pypdf>=6,<7",
    "pypdfium2>=4.30,<6",
]

[dependency-groups]
dev = [
    "ruff>=0.14,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
