[package]
name = "veoveo-task-runtime"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_task_runtime"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-stream = "0.3.6"
chrono.workspace = true
futures.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
surrealdb = { version = "=3.2.1", default-features = false, features = ["protocol-ws", "rustls"] }
thiserror = "2.0.18"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util.workspace = true
uuid = { workspace = true, features = ["serde", "v7"] }
veoveo-mcp-contract = { path = "../../mcp/contract" }
veoveo-platform-store = { path = "../store" }
