[project]
name = "veoveo-mcp"
version = "0.1.0"
description = "Veoveo platform contract, task runtime, and final MCP task extension for Python MCP servers"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.16",
    "pydantic>=2.8",
    "httpx>=0.27",
    "PyJWT>=2.9",
    "cryptography>=43",
    "surrealdb>=1.0.4",
    "starlette>=0.47",
    "uuid7>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veoveo_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
