[package]
name = "veoveo-artifact-mcp"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_artifact_mcp"
path = "src/lib.rs"

[[bin]]
name = "artifact-mcp"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
rustls.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
veoveo-artifact-client = { path = "../../platform/artifacts/client" }
veoveo-mcp-contract = { workspace = true, default-features = false }
veoveo-platform-store = { path = "../../platform/store" }

[dev-dependencies]
tempfile = "3"
